--- a/p1/style.css
+++ b/p1/style.css
@@ -2,10 +2,40 @@
     margin-bottom: .5rem;
 
 }
-input {
+body {
+    text-align: center;
+    background-color: lightgreen;
+}
+header{
+    padding: 2rem;
+    font-family: cursive;
+}
+input{
     padding: 1rem;
+    border-radius: 5px ;
+    font-size: 1.5rem;
+}
+.legend-border {
+}
+#file {
+    border-radius: 10px;
+    border: 1px solid black;
+    
+    margin: 1rem .5rem;  
+}
+select {
+    font-size: 1.5rem;
+    padding: 1rem;
+    border-radius: 7px ;
+    width: 29%;
 }
 
-select {
-    padding: 1rem;
+button {
+    margin-top: 5px;
+    padding: 0.8rem;
+    border-radius: 5px ;
+    font-size: 1.2rem;
+    background-color: rgba(6, 94, 209, 0.829);
+    font-family: cursive;
+    color: white;
 }
